--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "react-dom": "19.1.0",
     "react-grid-layout": "^1.5.2",
     "react-markdown": "^10.1.0",
+    "recharts": "^3.2.1",
     "rehype-raw": "^7.0.0",
     "remark-gfm": "^4.0.1",
     "sonner": "^2.0.7",
