--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "react-grid-layout": "^1.5.2",
     "react-hook-form": "^7.63.0",
     "react-markdown": "^10.1.0",
+    "react-resizable-panels": "^3.0.6",
     "recharts": "^3.2.1",
     "rehype-raw": "^7.0.0",
     "remark-gfm": "^4.0.1",
